test/fail/missing-semi.rnp
11 + 11
22 + 22
---
 --> fail/missing-semi.rnp:1:8
  |
1 | 11 + 11
  |        ^ Expected semicolon after expression
  |
